# geeprocessing

./: .gitignore  README.md  pyproject.toml  run.py  test.py
contamination/: run.py
contamination/outputs/health/: health_distances.csv
contamination/outputs/mining/: mining_distances.csv
contamination/outputs/roads/: road_distances.csv
contamination/src/: get_roads.py  healthcare.py  loading.py  mining.py  pm25.py  road_distances.py
geeprocessing/: pyproject.toml  run.py
geeprocessing/outputs/: README.md  run.py
geeprocessing/src/: main.py
src/: h3funcs.py  main.py  pointfuncs.py  utils.py
weird_geojson/: auwrfl.geojson  bcsyun.geojson  gztsle.geojson  hdwryy.geojson  lneyff.geojson  oixzwx.geojson  tdfpcs.geojson  yolfxd.geojson
worldpop_ukr/: README.md  fix_csv_outputs.py  pyproject.toml
worldpop_ukr/src/: download.py  file_managing.py  rasters.py  run.py  shapes.py
