[project]
name = "geeprocessing"
version = "0.1.0"
description = ""
authors = [
    {name = "Jerónimo Luza",email = "jero.luza@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geemap (>=0.36.2,<0.37.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "earthengine-api (>=1.6.8,<2.0.0)",
    "geopandas (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
