[project]
name = "worldpop-ukr"
version = "0.1.0"
description = "This objective of this project is to obtain Age and Sex Structured WorldPop data for administrative levels of Ukraine"
authors = [
    {name = "Jerónimo Luza",email = "jero.luza@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas (>=1.1.1,<2.0.0)",
    "rioxarray (>=0.20.0,<0.21.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
